Added network configuration for docker-compose for static ip address

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,12 @@ services:
     ports:
       - 27017:27017
     command: mongod 
+    networks:
+      static-network:
+        ipv4_address: 172.22.0.2
+networks: 
+  static-network:
+    ipam: 
+      config: 
+        - subnet: 172.22.0.0/16
+
